<resources>
    <string name="app_name">demo_sqlite</string>
    <string name="hint_name">Please enter name</string>
    <string name="hint_cell">please enter cell no</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_show_data">Show data</string>
    <string name="btn_edit_data">Edit data</string>
    <string name="btn_delete_data">Delete data</string>
    <string name="data">Data from the database will be displayed here</string>
</resources>
